--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "fastly/fastly",
     "license": "MIT",
-    "type": "Library",
+    "type": "library",
     "description": "Provides a PHP client for the Fastly API",
     "authors": [
         {
